--- a/src/screens/sentence-management/sentence-management.screen.module.css
+++ b/src/screens/sentence-management/sentence-management.screen.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 8fr 4fr;
 }
 
 .sentenceList {
@@ -16,7 +16,17 @@
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 1fr 1fr;
 }
+.sentenceListItem > div {
+  align-self: center;
+  user-select: all;
+}
 
+.sentenceListItem > div::selection {
+  background: #ccc;
+}
+.sentenceListItem > div:hover {
+  cursor: pointer;
+}
 .sentenceListItem__header {
   padding: 0.5rem;
   border-bottom: 1px solid #ccc;
